--- a/notebooks/plot.contacts.Rmd
+++ b/notebooks/plot.contacts.Rmd
@@ -2,13 +2,6 @@
 title: "Plot of contacts for 16p HiC samples"
 author: "Siddharth Reed"
 date: "`r Sys.Date()`"
-output: 
-    html_document:
-        toc: true
-        toc_float: true
-        theme: paper
-        code_folding: hide
-        df_print: paged
 ---
 <style type="text/css">
 .main-container {
@@ -18,49 +11,58 @@ output:
 }
 </style>
 
-# Prepare data
+# Set up + Load all differential contact results
 
 ```{r knitr}
 library(knitr)
 knitr::opts_chunk$set(
-    dev=c('png', 'pdf', 'tiff'),
+    eval=TRUE,
+    warning=FALSE,
+    message=FALSE,
+    results=FALSE,
+    dev=c('png', 'pdf', 'svg'),
     dpi=300
 )
 ```
-Set up file locations
-```{r locations, results=FALSE}
+Set up file locations + load dependenies
+```{r dependencies}
 library(here)
-BASE_DIR=here()
-source(file.path(BASE_DIR, 'scripts/locations.R'))
-```
-Load dependencies
-```{r deps}
+here::i_am('notebooks/plot.contacts.Rmd')
+BASE_DIR <- here()
+source(file.path(BASE_DIR, 'scripts', 'locations.R'))
+source(file.path(BASE_DIR, 'scripts', 'constants.R'))
+source(file.path(SCRIPT_DIR, 'utils.data.R'))
+source(file.path(SCRIPT_DIR, 'utils.plot.R'))
 library(tidyverse)
 library(magrittr)
-source(file.path(BASE_DIR, 'scripts/utils.data.R'))
-source(file.path(BASE_DIR, 'scripts/utils.qc.R'))
-source(file.path(BASE_DIR, 'scripts/utils.plot.R'))
+library(ggplot2)
+library(ggh4x)
+library(GGally)
+library(ComplexUpset)
+library(gghic)
 ```
-Load sample metadata
-```{r load_metadata, message=FALSE, rows.print=5}
-sample.metadata <- load_sample_metadata()
-sample.metadata
+Load 
+```{r load_loops, eval=TRUE}
 ```
-Load genome coverage from `cooltools coverage`
-```{r load_coverage, rows.print=5}
-genome.coverage <- 
-    check_cached_results( 
-        results_file=NULL,
-        force_redo=FALSE,
-        return_data=TRUE,
-        results_fnc=load_genome_coverage,
-        weights=c('raw', 'balanced'),
-        resolutions=c(1000)
+re-usable plot elements
+```{r plot_elements}
+zero.lines <- 
+    list(
+        geom_hline(
+            yintercept=0,
+            linewidth=0.5,
+            color='black',
+            linetype='dashed'
+        ),
+        geom_vline(
+            xintercept=0,
+            linewidth=0.5,
+            color='black',
+            linetype='dashed'
+        )
     )
-genome.coverage
 ```
-
-# Coverage Line Plots
 
 # Contact Heatmaps
 
+# Heatmap + Feature Annotations
