--- a/notebooks/loops.Rmd
+++ b/notebooks/loops.Rmd
@@ -16,12 +16,15 @@ date: "`r Sys.Date()`"
 ```{r knitr}
 library(knitr)
 knitr::opts_chunk$set(
+    results=FALSE,
+    message=FALSE,
+    warning=FALSE,
     dev=c('png', 'pdf', 'svg'),
     dpi=300
 )
 ```
 Set up file locations + load dependences
-```{r dependencies, results=FALSE, message=FALSE, warning=FALSE}
+```{r dependencies}
 library(here)
 here::i_am('notebooks/loops.Rmd')
 BASE_DIR <- here()
@@ -32,28 +35,503 @@ source(file.path(SCRIPT_DIR, 'utils.plot.R'))
 source(file.path(SCRIPT_DIR, 'loops/utils.loops.R'))
 library(tidyverse)
 library(magrittr)
-library(ggplot2)
-library(ggh4x)
-library(purrr)
+# library(ggplot2)
+# library(ggh4x)
+# library(GGally)
+# library(ComplexUpset)
 ```
 
 # Load Loop Annotations
 
 Load all cooltools loop annotations
-```{r load_hiTAD_TADs}
-all.loop.annotations.df <- 
+Transform annotations so each row is 1 kernel (multiple per loop)
+```{r load_loops}
+per.kernel.loops.df <- 
     check_cached_results(
         results_file=COOLTOOLS_LOOPS_RESULTS_FILE,
         # force_redo=TRUE,
         results_fnc=load_all_cooltools_dots
     ) %>%
     post_process_cooltools_dots_results() %>% 
+    filter(kernel == 'donut') %>% 
+    filter(log10.qval > -log10(0.1)) %>% 
+    filter(weight == 'balanced', resolution == 10000) %>% 
     standardize_data_cols()
 ```
-
-# Plot loops
-
-```{r plot_loops}
-all.loop.annotations.df %>% head(2) %>% t()
+Load annotation data
+```{r load_annotation_data, eval=FALSE}
+chr.sizes.df <- load_chr_sizes()
+# functional.annotations.df <- load_functional_annotations()
+FUNCTIONAL_ANNOTATION_FILES
+annotations.df <- 
+    FUNCTIONAL_ANNOTATION_FILES %>%
+    {.[1]} %>%
+    read_tsv()
+annotations.df
+# abcs.df <- 
+#     ABC_ANNOTATIONS_FILE %>%
+#     read_tsv()
 ```
+
+# Number of Loops {.tabset}
+
+```{r n_loops}
+n.loops.per.chr.df <- 
+    per.kernel.loops.df %>%
+    # cumulative number of loops at different threshold
+    mutate(
+        'sig.lvl.qval < 0.000001'=log10.qval > -log10(0.000001),
+        'sig.lvl.qval < 0.001'=log10.qval > -log10(0.001),
+        'sig.lvl.qval < 0.1'=log10.qval > -log10(0.1),
+        'sig.lvl.N.S.'=log10.qval <= -log10(0.1)
+    ) %>% 
+    select(
+        # type, isMerged, 
+        weight, resolution, 
+        SampleID, 
+        chr,
+        kernel,
+        starts_with('sig.lvl.')
+    ) %>% 
+    pivot_longer(
+        starts_with('sig.lvl.'),
+        names_to='sig.lvl',
+        names_prefix='sig.lvl.',
+        values_to='meet.sig.lvl'
+    ) %>% 
+    filter(meet.sig.lvl) %>% 
+    mutate(
+        sig.lvl=
+            factor(
+                sig.lvl,
+                levels=
+                    c(
+                        'qval < 0.000001',
+                        'qval < 0.001',
+                        'qval < 0.1',
+                        'N.S.'
+                    )
+            )
+    ) %>% 
+    count(
+        # type, isMerged, 
+        weight, resolution, 
+        SampleID, 
+        chr,
+        kernel,
+        sig.lvl,
+        name='n.loops'
+    )
+```
+Plot number of sig. loops per condition
+```{r plot_n_loops_heatmap, results='asis', fig.dim=c(10,6)}
+n.loops.per.chr.df %>% 
+    # filter(kernel == 'donut') %>% 
+    # filter(resolution == '25Kb') %>% 
+    make_nested_plot_tabs(
+        # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
+        group.cols=c('weight', 'resolution'),
+        plot.fnc=plot_barplot,
+        max.header.lvl=2,
+        x.var='chr',
+        x.scale.mode='discrete',
+        y.var='n.loops',
+        fill.var='SampleID', 
+        facet.row='sig.lvl',
+        facet.col='kernel',
+        legend.position='top',
+        # axis.text.x=element_text(angle=45, hjust=1),
+        # legend.text=element_text(angle=35, hjust=1),
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank()
+    )
+```
+
+# Size of Loops {.tabset}
+
+Plot size distribution of loops
+```{r plot_loop_size_violin, results='asis', fig.dim=c(10,6)}
+per.kernel.loops.df %>% 
+    # filter(kernel == 'donut') %>% 
+    # filter(resolution == '25Kb') %>% filter(weight == 'raw') %>% 
+    make_nested_plot_tabs(
+        # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
+        group.cols=c('weight', 'resolution'),
+        max.header.lvl=2,
+        plot.fnc=plot_boxplot,
+        quantile.linetype=TRUE,
+        # position='dodge',
+        # adjust=0.5,
+        x.var='chr',
+        x.scale.mode='discrete',
+        y.var='length',
+        y.scale.mode='mb',
+        fill.var='SampleID', 
+        facet.row='kernel',
+        legend.position='top',
+        axis.text.x=element_text(angle=45, hjust=1),
+        # legend.text=element_text(angle=35, hjust=1),
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank()
+    )
+```
+
+# Loop Sigificance + Enrichment {.tabset}
+
+## Distribution Plots {.tabset}
+
+Make violin plot with q-values
+```{r box_plot, results='asis', fig.dim=c(10,6), eval=FALSE}
+per.kernel.loops.df %>% 
+    pivot_longer(
+        c('enrichment', 'log10.qval'),
+        names_to='metric', 
+        values_to='value'
+    ) %>% 
+    make_nested_plot_tabs(
+        # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
+        group.cols=c('weight', 'resolution'),
+        max.header.lvl=3,
+        plot.fnc=plot_boxplot,
+        x.var='chr',
+        y.var='value',
+        fill.var='SampleID',
+        # plot_pts=TRUE,
+        facet.col='kernel',
+        facet.row='metric',
+        x.scale.mode='discrete',
+        scales='free_y',
+        # size=0.25,
+        strip.text.x=element_text(size=5),
+        axis.text.x=element_text(angle=45, hjust=1)
+    )
+```
+
+## Manhattan Plots {.tabset}
+
+Make manhattan plot with q-values
+```{r manhattan_plot, results='asis', fig.dim=c(10,6)}
+per.kernel.loops.df %>% 
+    make_nested_plot_tabs(
+        # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
+        group.cols=c('weight', 'resolution'),
+        max.header.lvl=3,
+        plot.fnc=plot_jitter,
+        y.var='log10.qval',
+        # x.var='chr',
+        # color.var='Genotype',
+        # shape.var='Genotype',
+        x.var='SampleID',
+        color.var='enrichment',
+        facet.col='chr',
+        facet.row='kernel',
+        x.scale.mode='discrete',
+        scales='free_y',
+        size=0.25,
+        axis.text.x=element_text(angle=45, hjust=1)
+    )
+```
+
+## Volcano-ish plot Plots {.tabset}
+
+Plot loop enrichment against log10 qvalue
+```{r volcanoish, results='asis', fig.dim=c(10,6)}
+per.kernel.loops.df %>% 
+    # filter(weight == 'raw', resolution == '10Kb') %>% 
+    make_nested_plot_tabs(
+        # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
+        # group.cols=c('weight', 'resolution', 'metric', 'kernel'),
+        group.cols=c('weight', 'resolution', 'kernel'),
+        max.header.lvl=3,
+        plot.fnc=plot_jitter,
+        x.var='enrichment',
+        y.var='log10.qval',
+        color.var='SampleID',
+        facet.group='chr',
+        facet.nrow=4,
+        scales='fixed',
+        legend.position='top',
+        # size=0.25,
+        strip.text=element_text(size=5),
+        axis.text.x=element_text(angle=45, hjust=1),
+        axis.title.x=element_blank()
+    )
+```
+
+# Compare Loops across Genotypes {.tabset}
+
+Pivot anchor data
+```{r compare_anchors}
+similarity.df <- 
+    per.kernel.loops.df %>%
+    select(-c(count, enrichment, log10.qval)) %>% 
+    rename(
+        start=anchor.left,
+        end=anchor.right
+    ) %>% 
+    nest(
+        boundaries=
+            c(
+                start,
+                end,
+                length
+            )
+    ) %>% 
+    mutate(SampleID2=SampleID) %>% 
+    nest(
+        SampleInfo=
+            c(
+                Edit,
+                Genotype,
+                Celltype,
+                # CloneID,
+                # TechRepID,
+                SampleID
+            )
+    ) %>% 
+    rename(SampleID=SampleID2) %>% 
+    check_cached_results(
+        results_file=LOOP_SIMILARITY_RESULTS_FILE,
+        # force_redo=TRUE,
+        results_fnc=calculate_all_boundary_similarities,
+        boundaries.df=.,
+        sample.group.comparisons=
+            SAMPLE_GROUP_COMPARISONS %>%
+            rename(
+                'SampleID.P1'=Sample.Group.Numerator,
+                'SampleID.P2'=Sample.Group.Denominator
+            ),
+        pair_grouping_cols=
+            c(
+                'weight',
+                'resolution',
+                'kernel',
+                'chr'
+            )
+    ) %>% 
+    mutate(chr=factor(chr, levels=CHROMOSOMES))
+# similarity.df %>% dplyr::count(weight, resolution, SampleID)
+# similarity.df
+```
+```{r compute_anchor_diffs}
+diff.df <- 
+    similarity.df %>% 
+    # separate_wider_delim(
+    #     SampleID,
+    #     delim=' vs ',
+    #     names=c('SampleID.P1', 'SampleID.P2'),
+    #     cols_remove=FALSE
+    # ) %>% 
+    inner_join(
+        per.kernel.loops.df %>%
+        select(-c(Edit, Celltype, Genotype, length)),
+        by=
+            join_by(
+                weight,
+                kernel,
+                resolution,
+                chr,
+                SampleID.P1 == SampleID,
+                start.P1 == anchor.left,
+                end.P1 == anchor.right
+            )
+    ) %>% 
+    inner_join(
+        per.kernel.loops.df %>%
+        select(-c(Edit, Celltype, Genotype, length)),
+        suffix=c('.P1', '.P2'),
+        by=
+            join_by(
+                weight,
+                kernel,
+                resolution,
+                chr,
+                SampleID.P2 == SampleID,
+                start.P2 == anchor.left,
+                end.P2 == anchor.right
+            )
+    ) %>% 
+    select(
+        weight,
+        resolution,
+        chr,
+        kernel,
+        # SampleID.P1,
+        # SampleID.P2
+        # Edit,
+        # Genotype,
+        # Celltype,
+        SampleID,
+        start.P1,
+        start.P2,
+        end.P1,
+        end.P2,
+        length.P1,
+        length.P2,
+        count.P1,
+        count.P2,
+        enrichment.P1,
+        enrichment.P2,
+        log10.qval.P1,
+        log10.qval.P2,
+        # start.diff,
+        # end.diff,
+        # length.diff,
+        # count.diff,
+        # enrichment.diff,
+        # log10.qval.diff,
+        # jaccard
+        # moc.inner,
+        # MoC.norm,
+    ) %>%
+    group_by(weight, resolution, chr, kernel, SampleID) %>% 
+    mutate(pair.idx=row_number()) %>% 
+    ungroup() %>% 
+    rename_with(~str_replace(.x, 'log10.qval', 'log10_qval')) %>% 
+    pivot_longer(
+        c(ends_with('.P1'), ends_with('.P2')),
+        names_to='metric',
+        values_to='value',
+    ) %>%
+    separate_wider_delim(
+        metric,
+        delim='.',
+        names=c('metric', 'pair.side')
+    ) %>% 
+    pivot_wider(
+        names_from=pair.side,
+        values_from=value
+    ) %>% 
+    mutate(diff=P2 - P1)
+```
+
+## Plot anchor differences boxplot {.tabset}
+
+```{r plot_compare_anchors_boxplot, results='asis', fig.dim=c(10,6)}
+diff.df %>% 
+    # filter(!metric %in% c('start', 'end', 'length')) %>% 
+    filter(metric %in% c('length', 'enrichment', 'log10_qval')) %>% 
+    mutate(diff=abs(diff)) %>% 
+    make_nested_plot_tabs(
+        # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
+        group.cols=c('weight', 'resolution'),
+        max.header.lvl=3,
+        plot.fnc=plot_boxplot,
+        x.var='chr',
+        y.var='diff',
+        fill.var='SampleID',
+        facet.row='metric',
+        x.scale.mode='discrete',
+        scales='free_y',
+        legend.position='top',
+        axis.title.x=element_blank(),
+        strip.text=element_text(size=20),
+        axis.text.x=element_text(angle=45, hjust=1)
+    )
+```
+
+## Plot anchor differences scatter {.tabset}
+
+```{r plot_compare_anchors_scatter, results='asis', fig.dim=c(10,6)}
+diff.df %>% 
+    # filter(metric %in% c(start, end, length)) %>% 
+    # filter(!metric %in% c('start', 'end', 'length')) %>% 
+    filter(metric %in% c('enrichment', 'log10_qval')) %>% 
+    make_nested_plot_tabs(
+        # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
+        group.cols=c('weight', 'resolution'),
+        max.header.lvl=3,
+        plot.fnc=plot_jitter,
+        x.var='P1',
+        y.var='P2',
+        color.var='SampleID',
+        # facet.row='metric',
+        facet.group='metric',
+        facet.ncol=1,
+        scales='free',
+        size=0.75,
+        legend.position='top',
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank(),
+        strip.text=element_text(size=20),
+        axis.text.x=element_text(angle=45, hjust=1)
+    )
+```
+
+## Plot Anchor MoCs {.tabset}
+
+```{r plot_compare_anchors_MoC, results='asis', fig.dim=c(10,6)}
+similarity.df %>% 
+    # select(-c(ends_with('diff'))) %>% 
+    group_by(weight, resolution, chr, kernel, SampleID) %>%
+    summarize(MoC=(sum(moc.inner) - 1) * unique(MoC.norm)) %>% 
+    ungroup() %>% 
+    make_nested_plot_tabs(
+        # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
+        group.cols=c('weight', 'resolution'),
+        max.header.lvl=3,
+        plot.fnc=plot_barplot,
+        x.var='chr',
+        y.var='MoC',
+        # color.var='Genotype',
+        # shape.var='Genotype',
+        # x.var='Genotype',
+        fill.var='SampleID',
+        # facet.col='chr',
+        # facet.row='context',
+        x.scale.mode='discrete',
+        # y.scale.mode='mb',
+        # scales='free_y',
+        # size=0.25,
+        legend.position='top',
+        axis.title.x=element_blank(),
+        axis.text.x=element_text(angle=45, hjust=1)
+    )
+```
+
+# Loop Coverage {.tabset}
+
+How much of the genome is bewteen loops?
+```{r loop_coverage, results='asis', fig.dim=c(10,6), eval=FALSE}
+per.kernel.loops.df %>% 
+    filter(resolution == '25Kb') %>% filter(weight == 'raw') %>% 
+    group_by(weight, resolution, SampleID, chr, kernel) %>% 
+    rowwise() %>%
+    mutate(resolution.int=scale_numbers(resolution, force_numeric=TRUE)) %>% 
+    mutate(bins=seq(anchor.left, anchor.right, resolution.int)) %>% 
+    summarize(bp.in_loops=unique(c(bins))) %>% 
+    {.}
+    left_join(
+        chr.sizes.df,
+        by=join_by(chr)
+    ) %>% 
+    mutate(
+        bp.out_loops=chr.size.bp - bp.in_loops,
+        pct.in_loops=bp.in_loops / chr.size.bp * 100
+    )
+    make_nested_plot_tabs(
+        # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
+        group.cols=c('weight', 'resolution'),
+        max.header.lvl=3,
+        plot.fnc=plot_barplot,
+        # y.var='log10.qval',
+        # x.var='chr',
+        # color.var='Genotype',
+        # shape.var='Genotype',
+        # x.var='Genotype',
+        # color.var='enrichment',
+        # facet.col='chr',
+        # facet.row='kernel',
+        x.scale.mode='discrete',
+        scales='free_y',
+        size=0.25,
+        axis.text.x=element_text(angle=45, hjust=1)
+    )
+```
+
+# Plot against genome annotations
+
+## Plot loops against CTCF sites
+
+## Plot against CNVs?
 
